2010-07-20  Omair Majid  <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/resources/Messages.properties:
	Add LUnsignedJarWithSecurity LUnsignedJarWithSecurityInfo.
	* netx/net/sourceforge/jnlp/runtime/JNLPClassLoader.java
	(setSecurity): Can now throw a LaunchException if the JNLP file requests
	permissions but the jars are unsigned.

2010-07-19  Omair Majid  <omajid@redhat.com>

	PR icedtea/372
	* netx/net/sourceforge/jnlp/security/SecurityDialogUI.java: Renamed to..
	* netx/net/sourceforge/jnlp/security/SecurityDialogPanel.java: New file.
	Remove all usage of Look and Feel related functionality. Extend JPanel.
	(createSetValueListener): New method.
	(setVisible): New method.
	(requestFocusOnDefaultButton): New method.
	* netx/net/sourceforge/jnlp/security/AccessWarningPane.java
	Extend SecurityDialogPanel instead of SecurityDialogUI
	(AccessWarningPane): Take a SecurityWarningDialog instead of a JComponent
	as a paramenter. Call addComponents.
	(installComponents): Renamed to
	(addComponents): New method.
	(R): Moved to parent class.
	(htmlWrap): Likewise.
	* netx/net/sourceforge/jnlp/security/AppletWarningPane.java
	Extend SecurityDialogPanel instead of SecurityDialogUI
	(AppletWarningPane): Take a SecurityWarningDialog instead of a JComponent
	as a paramter. Call addComponents.
	(installComponents): Renamed to...
	(addComponents): New method.
	(htmlWrap): Moved to parent class.
	* netx/net/sourceforge/jnlp/security/CertWarningPane.java
	Extend SecurityDialogPanel instead of SecurityDialogUI
	(CertWarningPane): Take a SecurityWarningDialog instead of a JComponent as
	a parameter. Call addComponents.
	(installComponents): Renamed to...
	(addComponents): New method.
	(R): Moved to parent class.
	(htmlWrap): Likewise.
	(CheckBoxListener): Add debug information.
	* netx/net/sourceforge/jnlp/security/CertsInfoPane.java
	Extend SecurityDialogPanel instead of SecurityDialogUI
	(CertsInfoPane): Take a SecurityWarningDialog instead of a JComponent as a